--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -252,15 +252,16 @@ table.navigation{background:#fff;float:right;margin:2px}
 .moin-footnotes p{margin:0 0 .33em 1em;font-size:.92em}
 #moin-rev-navigation{list-style:none;text-align:center}
 #moin-rev-navigation li{display:inline}
-.moin-disabled{color:#808080}
+.moin-disabled{color:#737373}
 .moin-rev-navigation-current{font-size:1.5em;text-transform:uppercase}
 .moin-rev-navigation-older,.moin-rev-navigation-newer{padding:0 20px 0 20px}
 .moin-form dd{margin-bottom:1em}
 .moin-form dd input{width:20em}
 .moin-form dt label.required:after{content:'*';color:#737373}
+#moin-usersettings a{color:#708090}
 .moin-tab-titles{margin:0;padding:-10px 0 0;list-style:none;border-bottom:3px solid #4e7da9}
 .moin-tab-titles li{display:inline-block;margin:10px 0 -3px;padding:0 5px;border-bottom:3px solid #4e7da9}
-.moin-tab-titles a{display:inline-block;padding:4px;background-color:#fff;border-width:1px 1px 0;border-style:solid;border-color:#4e7da9;color:#708090}
+.moin-tab-titles a{display:inline-block;padding:4px;background-color:#eef1f6;border-width:1px 1px 0;border-style:solid;border-color:#4e7da9;color:#708090}
 .moin-tab-titles a:hover{background-color:#eef1f6;text-decoration:none}
 .moin-tab-titles a.current{background:#d8dfe9;padding-top:8px;margin-top:-4px}
 .moin-tab-titles .change-indicator{font-weight:bold;color:#1f9ae0}
@@ -308,8 +309,8 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .moin-offset-links a{margin-right:10px;padding:3px 7px;font-size:20px;background:#fff;border:1px groove #4e7da9;border-radius:5px}
 .moin-offset-links a:hover{box-shadow:0 0 12px #9d9d9b}
 .moin-clr{clear:both}
-.moin-select-all{padding:.5em;color:#708090;background:#fff;border:1px solid #4e7da9;text-align:left}
-.moin-select-actions{position:relative;margin:0 1em;padding:0;background:#fff;z-index:2;white-space:nowrap;color:#708090;text-align:left}
+.moin-select-all{padding:.5em;color:#708090;background:#eef1f6;border:1px solid #4e7da9;text-align:left}
+.moin-select-actions{position:relative;margin:0 1em;padding:0;background:#eef1f6;z-index:2;white-space:nowrap;color:#708090;text-align:left}
 .moin-select-actions div{margin:0;padding:.5em;border:1px groove #4e7da9}
 .moin-select-actions div:hover,.action-visible div{background:#d8dfe9;color:#1f9ae0}
 .moin-select-actions .show-action{cursor:pointer}
@@ -335,7 +336,7 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .moin-align-right{text-align:right;float:right}
 .moin-align-right ul{margin:0;padding:0}
 .moin-align-right ul li.action-bar{list-style-type:none;display:inline-block}
-.moin-contenttypes-wrapper{position:relative;margin:0;color:#708090;background:#fff;border:1px solid #4e7da9;min-width:12em;text-align:left}
+.moin-contenttypes-wrapper{position:relative;margin:0;color:#708090;background:#eef1f6;border:1px solid #4e7da9;min-width:12em;text-align:left}
 .moin-contenttypes-wrapper div{cursor:pointer;margin:.1em;padding:.5em 1.2em .5em .5em;height:1em}
 div.ct-shown{background:#d8dfe9 url("../img/moin-movedown.png") no-repeat center right;color:#000}
 div.ct-hide{background:transparent url("../img/moin-moveup.png") no-repeat center right}
@@ -407,7 +408,7 @@ a:visited:hover{text-decoration:none;color:#1f9ae0}
 a:hover,a:active{text-decoration:underline;color:#1f9ae0}
 a.moin-nonexistent:link{color:#939393}
 a.moin-nonexistent:hover{color:#1f9ae0;text-decoration:underline}
-#moin-header{margin:0;padding:0;background:#708090;line-height:1.12em}
+#moin-header{margin:0;padding:0;background:#708090;color:#fff;line-height:1.12em}
 #moin-searchform{margin:8px .5em;padding:0;font-size:.82em;float:right;text-align:right}
 #moin-searchform input{font-size:100%;vertical-align:middle;background-color:#fff;border:1px solid #4e7da9}
 #moin-searchform #moin-search-submit{text-indent:-9000%;margin-left:-24px;width:20px;height:16px;background:url("../img/moin-search.png") center center no-repeat;background-size:16px 16px;border:none;overflow:hidden;vertical-align:middle;cursor:pointer}
@@ -419,11 +420,14 @@ a.moin-nonexistent:hover{color:#1f9ae0;text-decoration:underline}
 #moin-logo{float:left;margin:5px 10px;padding:0;font-size:1.4em;line-height:1em;font-weight:bold}
 #moin-logo img{vertical-align:middle}
 #moin-logo a{color:#fff;text-decoration:none}
-#moin-username{display:block;margin:0 12px 4px 12px;padding:0;font-size:.82em}
+#moin-username{display:block;margin:0 12px 4px 12px;padding:0;font-size:.82em;}
+#moin-username a{color:#fff}
 #moin-username input:hover{color:#1f9ae0}
 #moin-locationline{padding:0;font-size:100%;font-weight:normal;margin:.25em 12px 5px 12px}
 #moin-pagelocation{font-size:1.5em;letter-spacing:.05em}
-#moin-pagetrail{margin:0 .88em .25em 12px;padding:0;font-size:.88em}
+#moin-pagetrail{margin:0 .88em .25em 12px;padding:0;font-size:.88em;}
+#moin-pagetrail a{color:#fff}
+.moin-pagepath a{color:#fff !important}
 #moin-navibar{clear:both;display:block;margin:0;padding:0 10px;font-size:.82em}
 #moin-navibar li{float:left;display:inline;margin:0 2px;padding:2px 5px;border:1px solid #4e7da9;border-bottom:none;white-space:nowrap;font-size:.88em}
 #moin-navibar li.wikilink{background:#eef1f6}
@@ -452,7 +456,8 @@ a.moin-nonexistent:hover{color:#1f9ae0;text-decoration:underline}
 .moin-subitem-navigation .transclude-action{background:url("../img/moin-transclusion.png") no-repeat center center}
 #moin-footer{clear:both;margin:0 0}
 #moin-footer hr{margin:0;background-color:#4e7da9}
-#moin-pageinfo,#moin-wikilicense,#moin-credits,#moin-version,#moin-timings{margin:10px 20px;text-align:left;font-size:.7em;color:#737373}
+#moin-pageinfo,#moin-wikilicense,#moin-credits,#moin-version,#moin-timings{margin:10px 20px;text-align:left;font-size:.7em;color:#737373;}
+#moin-pageinfo a,#moin-wikilicense a,#moin-credits a,#moin-version a,#moin-timings a{color:#737373}
 #moin-timings li{display:inline-block;margin:0 20px 0 0}
 #moin-credits span{display:inline-block;margin:0 5px}
 #moin-creditlogos{float:right;list-style:none;margin:0 10px}
