--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1200,7 +1200,7 @@ a.moin-nonexistent:hover
     margin 0
     vertical-align top
     font-size 0.8em
-    width 14em
+    width 15%
     overflow hidden
     display table-cell
     word-wrap break-word
