--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -961,6 +961,7 @@ ul.moin-tags li.weight9
     border-bottom border_style
     background-repeat no-repeat
     background-position 16px center
+    color font_color
 
 .moin-flash-hint
     background-image url(../img/smileys/idea.png)
