--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -400,8 +400,8 @@ ul.moin-tags li.weight9{font-size:200%}
 .moin-flash-error{background-image:url("../img/smileys/icon-error.png");color:#ff2727}
 body{background-color:#dfdfdf}
 #moin-main-wrapper{width:76%;min-width:700px;margin-left:auto;margin-right:auto;margin-top:0}
-#moin-page{margin:0;padding:0;display:table;width:100%;table-layout:fixed}
-#moin-content{background:#fff;overflow:hidden;box-shadow:1px 1px 33px -11px inset;padding:8px 25px;display:table-cell}
+#moin-page{margin:0;padding:0;display:table;width:100%;table-layout:fixed;background:#fff}
+#moin-content{overflow:hidden;padding:8px 25px;display:table-cell}
 a:link{color:#708090;text-decoration:none}
 a:visited{text-decoration:none;color:#88c2b5}
 a:visited:hover{text-decoration:none;color:#1f9ae0}
