--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -988,12 +988,12 @@ body
     margin-top 0px
 
 #moin-page
-    margin 0
-    padding 0
+    padding 1px
     display table
     width 100%
     table-layout fixed
     background page_color
+    border-radius 9px
 
 #moin-content
     overflow hidden
@@ -1030,6 +1030,8 @@ a.moin-nonexistent:hover
     background header_bg_color
     color heading_color
     line-height 1.12em
+    border-bottom-left-radius 9px
+    border-bottom-right-radius 9px
 
 #moin-searchform
     margin 8px .5em
@@ -1170,7 +1172,7 @@ a.moin-nonexistent:hover
     font-size 0.8em
     border-bottom border_style
     border-top border_style
-    margin-top -1px
+    border-radius 9px
 
 .moin-itemviews li
     display inline-block
@@ -1204,6 +1206,7 @@ a.moin-nonexistent:hover
     overflow hidden
     display table-cell
     word-wrap break-word
+    border-radius 9px
 
 .moin-subitem-navigation .list-header
     margin 2px 0
