Modernized theme background image added

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -979,6 +979,7 @@ ul.moin-tags li.weight9
 
 body
     background-color base_color
+    background url(../img/base.png)
 
 #moin-main-wrapper
     width 76%
