--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -349,6 +349,8 @@ table.navigation
     border-style solid
     border-color border_color
     color link_color
+    border-top-left-radius 7px
+    border-top-right-radius 7px
 
 .moin-tab-titles a:hover
     background-color table_bg_color
@@ -1139,6 +1141,8 @@ a.moin-nonexistent:hover
     border-bottom none
     white-space nowrap
     font-size .88em
+    border-top-left-radius 5px
+    border-top-right-radius 5px
 
 #moin-navibar li.wikilink
     background table_bg_color
