Modernized theme header elements margin and padding changed

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1029,7 +1029,7 @@ a.moin-nonexistent:hover
 
 #moin-header
     margin 0px
-    padding 0px
+    padding 0px 0px 10px 0px
     background header_bg_color
     color heading_color
     line-height 1.12em
@@ -1160,10 +1160,10 @@ a.moin-nonexistent:hover
 
 #moin-pageline
     clear both
-    margin 0
+    margin auto
     padding 0
-    width 100%
-    height 4px
+    width 98%
+    height 1px
     border-bottom 1px solid heading_color
     border-top 1px solid heading_color
     background heading_color
@@ -1171,7 +1171,7 @@ a.moin-nonexistent:hover
 .moin-itemviews
     clear both
     display block
-    margin 0
+    margin 0px 0px -8px 0px
     padding 2px 8px
     background panel_color
     font-size 0.8em
