Modernized theme link color changed

--- a/MoinMoin/themes/modernized/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/color_palette.styl
@@ -13,10 +13,10 @@ border_color = #4e7da9
 shadow_color = #9d9d9b
 table_bg_color = #eef1f6
 table_row_color = #d8dfe9
-link_color = #708090
+link_color = #00008B
 hover_color = #1f9ae0
 active_color = #51d443
-visited_color = #88c2b5
+visited_color = #008B8B
 nonexistent_link_color = #939393
 nonexistent_hover_color = #1f62ad
 selected_link_color = #F82A2A
