--- a/MoinMoin/themes/modernized/static/css/common.css
+++ b/MoinMoin/themes/modernized/static/css/common.css
@@ -198,8 +198,8 @@ h5{font-size:.83em;margin:1.5em 0;padding-bottom:2px}
 h6{font-size:.75em;margin:1.67em 0;padding-bottom:2px}
 h2,h3,h4,h5,h6{border-bottom:3px solid #4e7da9}
 a{text-decoration:none}
-a:link{color:#708090}
-a:visited{color:#88c2b5}
+a:link{color:#00008b}
+a:visited{color:#008b8b}
 a:hover{color:#1f9ae0}
 a:active{color:#51d443}
 a.moin-nonexistent:visited,a.moin-nonexistent{color:#939393}
@@ -258,10 +258,10 @@ table.navigation{background:#fff;float:right;margin:2px}
 .moin-form dd{margin-bottom:1em}
 .moin-form dd input{width:20em}
 .moin-form dt label.required:after{content:'*';color:#737373}
-#moin-usersettings a{color:#708090}
+#moin-usersettings a{color:#00008b}
 .moin-tab-titles{margin:0;padding:-10px 0 0;list-style:none;border-bottom:3px solid #4e7da9}
 .moin-tab-titles li{display:inline-block;margin:10px 0 -3px;padding:0 5px;border-bottom:3px solid #4e7da9}
-.moin-tab-titles a{display:inline-block;padding:4px;background-color:#eef1f6;border-width:1px 1px 0;border-style:solid;border-color:#4e7da9;color:#708090;border-top-left-radius:7px;border-top-right-radius:7px}
+.moin-tab-titles a{display:inline-block;padding:4px;background-color:#eef1f6;border-width:1px 1px 0;border-style:solid;border-color:#4e7da9;color:#00008b;border-top-left-radius:7px;border-top-right-radius:7px}
 .moin-tab-titles a:hover{background-color:#eef1f6;text-decoration:none}
 .moin-tab-titles a.current{background:#d8dfe9;padding-top:8px;margin-top:-4px}
 .moin-tab-titles .change-indicator{font-weight:bold;color:#1f9ae0}
@@ -309,8 +309,8 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .moin-offset-links a{margin-right:10px;padding:3px 7px;font-size:20px;background:#fff;border:1px groove #4e7da9;border-radius:5px}
 .moin-offset-links a:hover{box-shadow:0 0 12px #9d9d9b}
 .moin-clr{clear:both}
-.moin-select-all{padding:.5em;color:#708090;background:#eef1f6;border:1px solid #4e7da9;text-align:left}
-.moin-select-actions{position:relative;margin:0 1em;padding:0;background:#eef1f6;z-index:2;white-space:nowrap;color:#708090;text-align:left}
+.moin-select-all{padding:.5em;color:#00008b;background:#eef1f6;border:1px solid #4e7da9;text-align:left}
+.moin-select-actions{position:relative;margin:0 1em;padding:0;background:#eef1f6;z-index:2;white-space:nowrap;color:#00008b;text-align:left}
 .moin-select-actions div{margin:0;padding:.5em;border:1px groove #4e7da9}
 .moin-select-actionsdiv:hover{background:#d8dfe9;color:#1f9ae0}
 .moin-select-actions.action-visible div{color:#000}
@@ -323,13 +323,13 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .allitem-toselect:after{content:url("../img/moin-checkbox-off.png");margin:0 .2em}
 .moin-select-actions ul{position:absolute;margin:0;left:0;top:2em;padding:0;display:none;background:#fff;border:1px solid #4e7da9;z-index:1}
 .moin-select-actions ul li{display:list-item;list-style-type:none;padding:.5em;min-width:7em;cursor:pointer}
-.moin-select-actions ul li:hover{background-color:#eef1f6;color:#708090}
+.moin-select-actions ul li:hover{background-color:#eef1f6;color:#00008b}
 .moin-index-message{width:50%;margin:1em auto;text-align:center;display:none}
 .moin-index-message span{padding:4px;background-color:#d8dfe9;color:#000}
 .moin-download-link{display:none}
 #moin-initials{width:90%;margin:5px auto;text-align:center}
 #moin-initials a{display:inline-block;margin:0;padding:4px 5px}
-#moin-initials a:hover,#moin-initials a.selected{background:#708090;border-radius:5px;color:#fff;text-decoration:none}
+#moin-initials a:hover,#moin-initials a.selected{background:#00008b;border-radius:5px;color:#fff;text-decoration:none}
 .moin-item-index{width:100%;margin-left:.5em}
 .moin-item-index div{float:left;width:15em}
 .moin-item-index div .moin-select-item{visibility:hidden;display:inline-block;width:17px;cursor:default;background:transparent url("../img/moin-checkbox-off.png") no-repeat}
@@ -338,7 +338,7 @@ p.searchhint{background-color:#eef1f6;border:1px solid #4e7da9;padding:2px}
 .moin-align-right{text-align:right;float:right}
 .moin-align-right ul{margin:0;padding:0}
 .moin-align-right ul li.action-bar{list-style-type:none;display:inline-block}
-.moin-contenttypes-wrapper{position:relative;margin:0;color:#708090;background:#eef1f6;border:1px solid #4e7da9;min-width:12em;text-align:left}
+.moin-contenttypes-wrapper{position:relative;margin:0;color:#00008b;background:#eef1f6;border:1px solid #4e7da9;min-width:12em;text-align:left}
 .moin-contenttypes-wrapper div{cursor:pointer;margin:.1em;padding:.5em 1.2em .5em .5em;height:1em}
 div.ct-shown{background:#d8dfe9 url("../img/moin-movedown.png") no-repeat center right;color:#000}
 div.ct-hide{background:transparent url("../img/moin-moveup.png") no-repeat center right}
@@ -356,7 +356,7 @@ div.ct-hide{background:transparent url("../img/moin-moveup.png") no-repeat cente
 .moin-more-index:hover{text-decoration:none}
 .moin-index-path{margin-left:.5em}
 .moin-index-path:before{content:url("../img/moin-parent.png");margin:0 .3em}
-.moin-path-separator{font-size:120%;color:#708090}
+.moin-path-separator{font-size:120%;color:#00008b}
 .moin-index-separator{clear:both;border-top:1px solid #4e7da9;width:80%;display:none}
 #moin-upload-cont{min-height:10px}
 #file_upload{margin-top:2em}
@@ -404,8 +404,8 @@ body{background-color:#dfdfdf;background:url("../img/base.png")}
 #moin-main-wrapper{width:87%;min-width:700px;margin-left:auto;margin-right:auto;margin-top:0}
 #moin-page{padding:1px;display:table;width:100%;table-layout:fixed;background:#fff;border-radius:9px}
 #moin-content{overflow:hidden;padding:8px 25px;display:table-cell}
-a:link{color:#708090;text-decoration:none}
-a:visited{text-decoration:none;color:#88c2b5}
+a:link{color:#00008b;text-decoration:none}
+a:visited{text-decoration:none;color:#008b8b}
 a:visited:hover{text-decoration:none;color:#1f9ae0}
 a:hover,a:active{text-decoration:underline;color:#1f9ae0}
 a.moin-nonexistent:link{color:#939393}
@@ -449,7 +449,7 @@ a.moin-nonexistent:hover{color:#1f9ae0;text-decoration:underline}
 .moin-subitem-navigation ul{display:block;margin:0;padding:0 4px}
 .moin-subitem-navigation li{padding:.5em 2px;line-height:1em;list-style:none}
 .moin-subitem-navigation li:hover{background:#eef1f6}
-.moin-subitem-navigation a{color:#708090}
+.moin-subitem-navigation a{color:#00008b}
 .moin-subitem-navigation a:hover{text-decoration:underline}
 .moin-subitem-navigation li ul{border-left:1px dotted #4e7da9;display:none}
 .moin-subitem-navigation .expander{background:url("../img/moin-expand.png") no-repeat center center;cursor:pointer;height:16px;overflow:hidden;vertical-align:middle;width:16px;border:hidden;text-indent:-9000%}
