Modernized theme moin-flash moved to page from header

--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -959,6 +959,7 @@ ul.moin-tags li.weight9
 
 #moin-flash
     margin 0
+    display table-row
 
 .moin-flash
     margin 0
@@ -967,6 +968,8 @@ ul.moin-tags li.weight9
     border-bottom border_style
     background-repeat no-repeat
     background-position 16px center
+    border-top-right-radius 9px
+    border-top-left-radius 9px
     color font_color
 
 .moin-flash-hint
