--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -353,7 +353,7 @@ table.navigation
     border-top-right-radius 7px
 
 .moin-tab-titles a:hover
-    background-color table_bg_color
+    background-color table_row_color
     text-decoration none
 
 .moin-tab-titles a.current
