--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -1195,6 +1195,8 @@ a.moin-nonexistent:hover
 .moin-itemviews a,
 .moin-itemviews a:visited
     color panel_item_color
+    &:hover
+        color heading_color
 
 .moin-itemviews a:hover
     text-decoration underline
